--- a/package.json
+++ b/package.json
@@ -6,6 +6,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC"
+  "dependencies": {
+    "commander": "2.16.0"
+  },
+  "bin": {
+    "olivia": "bin/olivia.js"
+  },
+  "author": "yzsolo125@gmail.com",
+  "license": "MIT",
+  "homepage": "https://github.com/yzsolo/olivia"
 }
